--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ru">
     <head>
         <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
         <title>Таймеры Shkolkovo Style</title>
         <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet" />
         <style>
@@ -13,23 +13,30 @@
                 --bg-color: #f3f4f6;
             }
 
+            * {
+                box-sizing: border-box;
+                -webkit-tap-highlight-color: transparent;
+            }
+
             body {
                 font-family: "Inter", sans-serif;
                 background-color: var(--bg-color);
                 display: flex;
                 flex-direction: column;
                 align-items: center;
-                justify-content: flex-start; /* Начинаем сверху */
-                min-height: 100vh;
+                justify-content: flex-start;
+                height: 100vh;
                 margin: 0;
+                overflow: hidden; /* Убираем прокрутку */
             }
 
             .header {
-                margin-top: 60px; /* Расстояние от верха */
-                margin-bottom: 30px;
+                margin-top: 5vh; /* Адаптивный отступ сверху */
+                margin-bottom: 3vh;
                 display: flex;
                 align-items: center;
                 gap: 12px;
+                flex-shrink: 0;
             }
 
             .header h1 {
@@ -41,23 +48,26 @@
 
             .container {
                 display: grid;
+                /* По умолчанию 4 в ряд, если места мало — 2х2 */
                 grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-                gap: 15px;
+                gap: 20px;
                 width: 90%;
                 max-width: 1000px;
+                flex-grow: 0;
             }
 
             .timer-card {
                 background: white;
                 border-radius: 16px;
-                padding: 24px;
+                padding: 20px;
                 position: relative;
                 overflow: hidden;
                 box-shadow: 0 4px 20px rgba(0, 0, 0, 0.05);
                 transition: all 0.3s ease;
                 border: 2px solid transparent;
-                cursor: pointer; /* Делаем кликабельным */
-                user-select: none; /* Чтобы текст не выделялся при тапах */
+                cursor: pointer;
+                user-select: none;
+                text-align: left;
             }
 
             .timer-card.active {
@@ -78,7 +88,7 @@
             }
 
             .time-display {
-                font-size: 42px;
+                font-size: clamp(24px, 5vw, 42px); /* Адаптивный размер шрифта */
                 font-weight: 700;
                 color: var(--dark-blue);
                 margin: 0;
@@ -100,23 +110,40 @@
             }
 
             .hint {
-                margin-top: 40px;
+                margin-top: auto;
+                margin-bottom: 5vh;
                 padding: 0 20px;
                 color: var(--gray-text);
                 font-size: 14px;
-                text-align: center; /* Центрируем надпись */
+                text-align: center;
+                flex-shrink: 0;
             }
 
-            /* Мобильная версия */
-            @media (max-width: 600px) {
-                .header { margin-top: 30px; }
-                .container { 
-                    grid-template-columns: repeat(2, 1fr); /* 2 колонки на мобилках */
-                    gap: 10px; 
+            /* Планшеты: строго 2 на 2 */
+            @media (max-width: 900px) and (min-width: 601px) {
+                .container {
+                    grid-template-columns: repeat(2, 1fr);
+                    max-width: 500px;
                 }
-                .timer-card { padding: 16px; }
+            }
+
+            /* Мобильные устройства: всё в один столбец */
+            @media (max-width: 600px) {
+                .header { margin-top: 3vh; }
+                .container { 
+                    grid-template-columns: 1fr; 
+                    gap: 12px;
+                    width: 85%;
+                }
+                .timer-card { 
+                    padding: 12px 20px; 
+                    display: flex;
+                    align-items: center;
+                    justify-content: space-between; /* Время справа, значок слева */
+                }
+                .key-badge { margin-bottom: 0; }
                 .time-display { font-size: 28px; }
-                .key-badge { margin-bottom: 5px; }
+                .hint { font-size: 12px; margin-bottom: 3vh; }
             }
         </style>
     </head>
